--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,8 @@
       "type": "go",
       "request": "launch",
       "mode": "auto",
-      "program": "${fileDirname}/../src/main.go",
+      // "program": "${fileDirname}/../src/main.go",
+      "program": "${workspaceRoot}/src/main.go",
       "env": {},
       "args": []
     }
